--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <systemPath>/Users/anzaroot/citation/citationcrf/lib/factorie-0.10.2-SNAPSHOT.jar</systemPath>-->
         </dependency>
         <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>8.4-702.jdbc4</version>
+        </dependency>
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>2.9.1</version>
